- fixed unstyled flash of content with v-cloak - fixed map not showing bin locations after editing a ticket that failed validation - fixed form validation for bin locations - added functional tests for bin location map

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -33,6 +33,10 @@ input:invalid {
   display: none;
 }
 
+[v-cloak] {
+  display:none;
+}
+
 /*
  * BOOTSTRAP MODS
  */
